# rstreams

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
benches/: encoder.rs  parser.rs
data/: A LOVER'S COMPLAINT.txt  KING RICHARD III.txt  KING RICHARD THE SECOND.txt  MEASURE FOR MEASURE.txt  MUCH ADO ABOUT NOTHING.txt  SECOND PART OF KING HENRY IV.txt  THE FIRST PART OF KING HENRY THE FOURTH.txt  THE HISTORY OF TROILUS AND CRESSIDA.txt  THE LIFE OF KING HENRY THE FIFTH.txt  THE LIFE OF TIMON OF ATHENS.txt  THE MERCHANT OF VENICE.txt  THE MERRY WIVES OF WINDSOR.txt  THE TRAGEDY OF CORIOLANUS.txt  THE TRAGEDY OF KING LEAR.txt  THE TRAGEDY OF ROMEO AND JULIET.txt  THE TRAGEDY OF TITUS ANDRONICUS.txt  THE TWO GENTLEMEN OF VERONA.txt  THE WINTER'S TALE.txt  TWELFTH NIGHT; OR, WHAT YOU WILL.txt
demo/: config.py
demo/examples/alpaca/: historical_news.py  historical_prices.py
demo/www/: App.jsx  index.js  package-lock.json  package.json  webpack.config.js
demo/www/components/: Page.jsx
demo/www/public/: index.html
demo/www/public/styles/: style.css
example/: shakespeare_consumer.rs  shakespeare_loader.rs  stocks.rs  tpipe.rs  tpipe2.rs
rstreams/: Cargo.toml  README.md
rstreams/data/: A MIDSUMMER NIGHT'S DREAM.txt  ALLS WELL THAT ENDS WELL.txt  AS YOU LIKE IT.txt  CYMBELINE.txt  KING HENRY THE EIGHTH.txt  KING JOHN.txt  LOVE'S LABOUR'S LOST.txt  THE COMEDY OF ERRORS.txt  THE FIRST PART OF HENRY THE SIXTH.txt  THE SECOND PART OF KING HENRY THE SIXTH.txt  THE SONNETS.txt  THE TAMING OF THE SHREW.txt  THE TEMPEST.txt  THE THIRD PART OF KING HENRY THE SIXTH.txt  THE TRAGEDY OF ANTONY AND CLEOPATRA.txt  THE TRAGEDY OF HAMLET, PRINCE OF DENMARK.txt  THE TRAGEDY OF JULIUS CAESAR.txt  THE TRAGEDY OF MACBETH.txt  THE TRAGEDY OF OTHELLO, MOOR OF VENICE.txt
rstreams/src/: actor.rs  join.rs  lib.rs  window.rs
samsa/: .gitignore  LICENSE  README.md
src/: actor.rs  channel.rs  error.rs  join.rs  lib.rs  store.rs  table.rs  window.rs
tests/: integration_test.rs  metadata.rs
