[package]
name = "rstreams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
bytes = "1.5.0"
chrono = "0.4.31"
fork_stream = "0.1.0"
futures = "0.3.29"
nom = "7.1.3"
redb = "1.4.0"
samsa = "0.1.1"
sentiment = "0.1.1"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = "1.35.0"
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
