[package]
name = "rstreams"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/CallistoLabsNYC/rstreams.git"
repository = "https://github.com/CallistoLabsNYC/rstreams.git"
readme = "README.md"
keywords = ["kafka", "redpanda", "confluent", "streaming"]

[dependencies]
async-stream = "0.3.5"
bytes = "1.5.0"
futures = "0.3.29"
nom = "7.1.3"
redb = "1.4.0"
samsa = "0.1.2"
serde = {version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = "1.35.0"
tokio-stream = "0.1.14"
tracing = "0.1.40"

[dev-dependencies]
fork_stream = "0.1.0"
tracing-subscriber = "0.3.18"

[[example]]
name = "loader"
path = "example/loader.rs"

[[example]]
name = "stocks"
path = "example/stocks.rs"

[[example]]
name = "tpipe"
path = "example/tpipe.rs"

[[example]]
name = "tpipe2"
path = "example/tpipe2.rs"
