[package]
name = "rstreams"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/CallistoLabsNYC/rstreams.git"
repository = "https://github.com/CallistoLabsNYC/rstreams.git"
readme = "README.md"
keywords = ["kafka", "redpanda", "confluent", "streaming"]

[dependencies]
async-stream = "0.3.5"
bytes = "1.6.0"
futures = "0.3.29"
nom = "7.1.3"
redb = "2.0.0"
samsa = { version = "0.1.3", optional = true }
serde = {version = "1.0.193", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"

[dev-dependencies]
fork_stream = "0.1.0"
tracing-subscriber = "0.3.18"

[features]
kafka = ["samsa"]

[[example]]
name = "loader"
path = "example/loader.rs"

[[example]]
name = "stocks"
path = "example/stocks.rs"

[[example]]
name = "tpipe"
path = "example/tpipe.rs"

[[example]]
name = "tpipe2"
path = "example/tpipe2.rs"
